src/objects/Coaching_Card__c.object
<CustomObject>
    <fields>
        <fullName>A_Actively_Evaluate_Numeric__c</fullName>
        <formula>If(ISPICKVAL(A_Actively_Evaluate__c,&quot;Not Rated&quot;), null, VALUE(TEXT(A_Actively_Evaluate__c)))</formula>
        <label>A - Actively Evaluate #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_Actively_Evaluate_Value__c</fullName>
        <formula>CASE(  A_Actively_Evaluate__c ,
&quot;1&quot;, IMAGE(&apos;/resource/CC_1_Star&apos;, &quot;1 Cup&quot; , 49, -1 ),
&quot;2&quot;, IMAGE(&apos;/resource/CC_2_Star&apos;, &quot;2 Cup&quot; , 49, -1 ),
&quot;3&quot;, IMAGE(&apos;/resource/CC_3_Star&apos;, &quot;3 Cup&quot; , 49, -1 ),
&quot;4&quot;, IMAGE(&apos;/resource/CC_4_Star&apos;, &quot;4 Cup&quot; , 49, -1 ),
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A - Actively Evaluate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_Actively_Evaluate__c</fullName>
        <inlineHelpText>- Spent time identifying what went well and what could&apos;ve gone differently?
- Reviewed the commercial value of the visit for JDE?</inlineHelpText>
        <label>A - Actively Evaluate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BARISTA_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>A_Ask_Questions_Numeric__c</fullName>
        <formula>If(ISPICKVAL(A_Ask_Questions__c,&quot;Not Rated&quot;), null, VALUE(TEXT(A_Ask_Questions__c)))</formula>
        <label>A - Ask Questions #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_Ask_Questions_Value__c</fullName>
        <formula>CASE(  A_Ask_Questions__c ,
&quot;1&quot;, IMAGE(&apos;/resource/CC_1_Star&apos;, &quot;1 Cup&quot; , 49, -1 ),
&quot;2&quot;, IMAGE(&apos;/resource/CC_2_Star&apos;, &quot;2 Cup&quot; , 49, -1 ),
&quot;3&quot;, IMAGE(&apos;/resource/CC_3_Star&apos;, &quot;3 Cup&quot; , 49, -1 ),
&quot;4&quot;, IMAGE(&apos;/resource/CC_4_Star&apos;, &quot;4 Cup&quot; , 49, -1 ),
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A - Ask Questions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_Ask_Questions__c</fullName>
        <inlineHelpText>Has the associate…

- Utilised a range of question types
- Selected the appropriate question type for the situation?
- Used a logical flow of questions?
- Avoided duplicative/confusing questions?
- Used precise language</inlineHelpText>
        <label>A - Ask Questions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BARISTA_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Coaching Cards</relationshipLabel>
        <relationshipName>Coaching_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Associate_Feedback__c</fullName>
        <inlineHelpText>Here the associate can provide his own feedback based on the Coaching Card</inlineHelpText>
        <label>Associate&apos;s Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Associate_Role__c</fullName>
        <formula>Associate__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Role Name of the Associate</inlineHelpText>
        <label>Associate Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associate</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Coaching_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Average_Score__c</fullName>
        <formula>(
IF ( ISPICKVAL(B_Be_Prepared__c, &apos;Not Rated&apos;) , 0, VALUE(TEXT(B_Be_Prepared__c))) +
IF ( ISPICKVAL(A_Ask_Questions__c, &apos;Not Rated&apos;) , 0, VALUE(TEXT(A_Ask_Questions__c))) +
IF ( ISPICKVAL(R_Recap_and_Reconfirm__c, &apos;Not Rated&apos;) , 0, VALUE(TEXT(R_Recap_and_Reconfirm__c))) +
IF ( ISPICKVAL(I_Introduce_the_Concept__c, &apos;Not Rated&apos;) , 0, VALUE(TEXT(I_Introduce_the_Concept__c))) +
IF ( ISPICKVAL(S_Seal_The_Deal__c, &apos;Not Rated&apos;) , 0, VALUE(TEXT(S_Seal_The_Deal__c))) +
IF ( ISPICKVAL(A_Actively_Evaluate__c, &apos;Not Rated&apos;) , 0, VALUE(TEXT(A_Actively_Evaluate__c))) +
IF ( ISPICKVAL(T_Take_Care_of_Execution__c, &apos;Not Rated&apos;) , 0, VALUE(TEXT(T_Take_Care_of_Execution__c)))
)
/
(
IF ( ISPICKVAL(B_Be_Prepared__c, &apos;Not Rated&apos;) , 0, 1) +
IF ( ISPICKVAL(A_Ask_Questions__c, &apos;Not Rated&apos;) , 0, 1) +
IF ( ISPICKVAL(R_Recap_and_Reconfirm__c, &apos;Not Rated&apos;) , 0, 1) +
IF ( ISPICKVAL(I_Introduce_the_Concept__c, &apos;Not Rated&apos;) , 0, 1) +
IF ( ISPICKVAL(S_Seal_The_Deal__c, &apos;Not Rated&apos;) , 0, 1) +
IF ( ISPICKVAL(A_Actively_Evaluate__c, &apos;Not Rated&apos;) , 0, 1) +
IF ( ISPICKVAL(T_Take_Care_of_Execution__c, &apos;Not Rated&apos;) , 0, 1)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B_Be_Prepared_Numeric__c</fullName>
        <formula>If(ISPICKVAL(B_Be_Prepared__c,&quot;Not Rated&quot;), null, VALUE(TEXT(B_Be_Prepared__c)))</formula>
        <label>B - Be Prepared #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B_Be_Prepared_Value__c</fullName>
        <formula>CASE( B_Be_Prepared__c,
&quot;1&quot;, IMAGE(&apos;/resource/CC_1_Star&apos;, &quot;1 Cup&quot; , 49, -1 ),
&quot;2&quot;, IMAGE(&apos;/resource/CC_2_Star&apos;, &quot;2 Cup&quot; , 49, -1 ),
&quot;3&quot;, IMAGE(&apos;/resource/CC_3_Star&apos;, &quot;3 Cup&quot; , 49, -1 ),
&quot;4&quot;, IMAGE(&apos;/resource/CC_4_Star&apos;, &quot;4 Cup&quot; , 49, -1 ),
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>B - Be Prepared</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_Be_Prepared__c</fullName>
        <inlineHelpText>Has the associate…

- Got the correct (and most appropriate) customer contact name? 
- Used the customer website &amp; other data sources to anticipate customer goals?
- Reviewed business history with JDE?
- Reviewed open requests, issue or complaints</inlineHelpText>
        <label>B - Be Prepared</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BARISTA_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coaching_Date__c</fullName>
        <label>Coaching Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Coaching Cards</relationshipLabel>
        <relationshipName>Coaching_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Follows_Barista__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does the associate follow BARISTA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_Introduce_the_Concept_Numeric__c</fullName>
        <formula>If(ISPICKVAL(I_Introduce_the_Concept__c,&quot;Not Rated&quot;), null, VALUE(TEXT(I_Introduce_the_Concept__c)))</formula>
        <label>I - Introduce the Concept #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>I_Introduce_the_Concept_Value__c</fullName>
        <formula>CASE(  I_Introduce_the_Concept__c ,
&quot;1&quot;, IMAGE(&apos;/resource/CC_1_Star&apos;, &quot;1 Cup&quot; , 49, -1 ),
&quot;2&quot;, IMAGE(&apos;/resource/CC_2_Star&apos;, &quot;2 Cup&quot; , 49, -1 ),
&quot;3&quot;, IMAGE(&apos;/resource/CC_3_Star&apos;, &quot;3 Cup&quot; , 49, -1 ),
&quot;4&quot;, IMAGE(&apos;/resource/CC_4_Star&apos;, &quot;4 Cup&quot; , 49, -1 ),
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>I - Introduce the Concept</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_Introduce_the_Concept__c</fullName>
        <inlineHelpText>- Used the Perfect Fit selling stories to choose the most appropriate concept?
- Described the Full Solution wholistically (not just talked about ingredients or machines)?
- Included a range of cross-sell items?
- Remembered to include tea?</inlineHelpText>
        <label>I - Introduce the Concept</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BARISTA_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Made_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has the associate made progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunities__c</fullName>
        <label>Opportunities</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Power_of_One__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COACHING CARD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_Recap_and_Reconfirm_Numeric__c</fullName>
        <formula>If(ISPICKVAL(R_Recap_and_Reconfirm__c,&quot;Not Rated&quot;), null, VALUE(TEXT(R_Recap_and_Reconfirm__c)))</formula>
        <label>R - Recap and Reconfirm #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_Recap_and_Reconfirm_Value__c</fullName>
        <formula>CASE(  R_Recap_and_Reconfirm__c ,
&quot;1&quot;, IMAGE(&apos;/resource/CC_1_Star&apos;, &quot;1 Cup&quot; , 49, -1 ),
&quot;2&quot;, IMAGE(&apos;/resource/CC_2_Star&apos;, &quot;2 Cup&quot; , 49, -1 ),
&quot;3&quot;, IMAGE(&apos;/resource/CC_3_Star&apos;, &quot;3 Cup&quot; , 49, -1 ),
&quot;4&quot;, IMAGE(&apos;/resource/CC_4_Star&apos;, &quot;4 Cup&quot; , 49, -1 ),
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>R - Recap and Reconfirm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Recap_and_Reconfirm__c</fullName>
        <label>R - Recap and Reconfirm</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BARISTA_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>S_Seal_The_Deal_Numeric__c</fullName>
        <formula>If(ISPICKVAL(S_Seal_The_Deal__c,&quot;Not Rated&quot;), null, VALUE(TEXT(S_Seal_The_Deal__c)))</formula>
        <label>S - Seal The Deal #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_Seal_The_Deal_Value__c</fullName>
        <formula>CASE(  S_Seal_The_Deal__c ,
&quot;1&quot;, IMAGE(&apos;/resource/CC_1_Star&apos;, &quot;1 Cup&quot; , 49, -1 ),
&quot;2&quot;, IMAGE(&apos;/resource/CC_2_Star&apos;, &quot;2 Cup&quot; , 49, -1 ),
&quot;3&quot;, IMAGE(&apos;/resource/CC_3_Star&apos;, &quot;3 Cup&quot; , 49, -1 ),
&quot;4&quot;, IMAGE(&apos;/resource/CC_4_Star&apos;, &quot;4 Cup&quot; , 49, -1 ),
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S - Seal The Deal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Seal_The_Deal__c</fullName>
        <inlineHelpText>- Identified all key objections?
- Presented counter arguments to objections?
- Overcome resistance using strong communication skills?
- Remained calm under pressure?
- Used appropriate price / package / contract options to construct the deal?</inlineHelpText>
        <label>S - Seal The Deal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BARISTA_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Organization__c</fullName>
        <formula>Text(Associate__r.Sales_Organization__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sales Organization of the Associate</inlineHelpText>
        <label>Sales Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <label>Strengths</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>T_Take_Care_of_Execution_Numeric__c</fullName>
        <formula>If(ISPICKVAL(T_Take_Care_of_Execution__c,&quot;Not Rated&quot;), null, VALUE(TEXT(T_Take_Care_of_Execution__c)))</formula>
        <label>T - Take Care of Execution #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_Take_Care_of_Execution_Value__c</fullName>
        <formula>CASE( T_Take_Care_of_Execution__c  ,
&quot;1&quot;, IMAGE(&apos;/resource/CC_1_Star&apos;, &quot;1 Cup&quot; , 49, -1 ),
&quot;2&quot;, IMAGE(&apos;/resource/CC_2_Star&apos;, &quot;2 Cup&quot; , 49, -1 ),
&quot;3&quot;, IMAGE(&apos;/resource/CC_3_Star&apos;, &quot;3 Cup&quot; , 49, -1 ),
&quot;4&quot;, IMAGE(&apos;/resource/CC_4_Star&apos;, &quot;4 Cup&quot; , 49, -1 ),
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T - Take Care of Execution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Take_Care_of_Execution__c</fullName>
        <inlineHelpText>- Left the customer with a written proposal?
- Made specific commitments on follow up actions?
- Confirmed timelines for next steps?
- Agreed the next visit date (in line with the contact strategy)?
- Updated the CRM with all relevant information</inlineHelpText>
        <label>T - Take Care of Execution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BARISTA_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Used_IT_Tools_and_CRM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used IT Tools and CRM</label>
        <type>Checkbox</type>
    </fields>
    <label>Coaching Card</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Associate__c</columns>
        <columns>B_Be_Prepared__c</columns>
        <columns>A_Ask_Questions__c</columns>
        <columns>R_Recap_and_Reconfirm__c</columns>
        <columns>I_Introduce_the_Concept__c</columns>
        <columns>S_Seal_The_Deal__c</columns>
        <columns>T_Take_Care_of_Execution__c</columns>
        <columns>A_Actively_Evaluate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Coaching Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coaching Cards</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>OwnerIsAssociate</fullName>
        <active>true</active>
        <errorConditionFormula>$User.Id =  Associate__c</errorConditionFormula>
        <errorDisplayField>Associate__c</errorDisplayField>
        <errorMessage>Stop trying to coach yourself!</errorMessage>
    </validationRules>
</CustomObject>